Added alot of changes, didnt add comments for everything

--- a/about.html
+++ b/about.html
@@ -5,13 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="menu.html">Menu</a></li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img id="banner" src="assets/images/banner.png" alt="Banner Logo">
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Origin Story</h2>
+        <p>In the bustling heart of Bangkok, in the vibrant year of 1998, 
+            a culinary visionary named Somsak Chaiyasit opened the doors to 
+            "Siam Elegance," a Thai restaurant that would soon become a beacon 
+            of authenticity in the world of Thai cuisine. Born and raised in Thailand, 
+            Somsak brought with him a deep passion for the rich tapestry of flavors that 
+            define the country's culinary heritage. The original location, nestled in a 
+            historic building adorned with traditional Thai art, quickly gained acclaim 
+            for its commitment to using genuine Thai ingredients and time-honored recipes,
+             transporting diners to the bustling streets of Bangkok with every bite. 
+             As Siam Elegance's reputation flourished, so did its reach, evolving into 
+             a beloved chain of restaurants across the globe, each preserving the essence 
+             of Thai culinary tradition under Somsak's watchful eye.</p>
+             <img id="about" src="assets/images/about.jpg" alt="About Us">
     </main>
 </body>
 </html>
