--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="menu.html">Menu</a></li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
-    <main>
+    <img id="banner" src="assets/images/banner.png" alt="Banner Logo">    <main>
         <h2>Hours of Operation</h2>
         <p>
             <strong>Monday-Friday:</strong> 11:00am-8:30pm
@@ -20,7 +29,15 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong>Phone Number:</strong>  +49 754-453-3054
+            <br>
+            <br>
+            <strong>Address:</strong>  Siam Elegance Thai Restaurant
+                                    123 Serenity Street, Sukhumvit District,
+                                     Bangkok 10110, Thailand
+            <br>
+            <br>
+            <strong>Email:</strong>  info@siam-elegance-restaurants.com
         </p>
     </main>
 </body>
