--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
             <li><a href="menu.html">Menu</a></li>
         </ul>
     </nav>
-    <!-- TODO: Banner Image here-->
     <img id="banner" src="assets/images/banner.png" alt="Banner Logo">    
     <main>
         <h1>H-Thai-ML</h1>
-        <!-- TODO: Home page code here-->
         <h2>Best Thai Food in Town!</h2>
         <div class="service"><h3>Dine In</h3></div>
         <div class="service"><h3>Take Out</h3></div>
         <div class="service"><h3>Delivery</h3></div>
+        <h2>Come out and join us for a well-structured meal!</h2>
         <img id="table" src="assets/images/table-in-restaurant.jpg" alt="tables in resturant img">
     </main>
 </body>
